public static class PlayerAnimationsConsts
{
    public static readonly string MovementValueKey = "MovementValue";
    public static readonly string RotatingValueKey = "RotationValue";
    public static readonly string JumpKey = "OnJumped";
    public static readonly string GroundStateKey = "IsOnGround";
}
